GNOME Bugzilla – Bug 162631
Race condition can create zero sized views
Last modified: 2011-09-30 19:23:38 UTC
Click on one of the sheet object buttons on toolbarn then click on sheet to actually create object -> crash. Here's the backtrace: Program received signal SIGSEGV, Segmentation fault.
+ Trace 54030
Thread NaN (LWP 17423)
Confirmed on cvs. Not on 1.4.1. Earlier I synced foocanvas which makes it the obvious suspect.
Reverting last foocanvas changes doesn't fix the problem for me.
Should be fixed in cvs.
CVS works better, but still crash when inserting a default sized chart object with a quick click (longer click doesn't crash gnumeric). For other sheet objects, a quick click makes appear size grips only, without sheet object.
I can not replicate. default sized charts work as expected, and not of the widgets or drawing objects are failing for me.
Keyword is "quick". It's more easy to replicate with graph objects. Open guru, click on "create" button, then a quick click anywhere on sheet. I can replicate with a fresh CVS update.
An updated backtrace would be helpful.
Here it is: Program received signal SIGSEGV, Segmentation fault.
+ Trace 54469
Thread 1089792064 (LWP 32263)
ok this time it's really really fixed At worst future variants of this race condition will produce a warning.
Program received signal SIGSEGV, Segmentation fault.
+ Trace 54543
Thread NaN (LWP 20187)
got it.